fixed closing tab

--- a/public/client.html
+++ b/public/client.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h3>Demo Node & Faye Chat</h3>
-		<div style="width: 800px;"
+		<div style="width: 800px;">
 	        <div style="width:300px; float:left;">
 	        	<fieldset><legend>Openly Rant Here:</legend>
 		        	<label for="user">Geek Name:</label><br />
